--- a/client/public/style.css
+++ b/client/public/style.css
@@ -1,6 +1,5 @@
 /* General CSS rules */
 
 html {
-  background-image: url(./images/SUCRE_ROSE_Background.jpg);
-  background-size: fit;
+  background-image: url(./images/Background400px.svg);
 }
